# DashBoard_Automative

./: CMakeLists.txt  main.cpp  resources.qrc
backend/: DashboardController.cpp  DashboardController.h  SerialWorker.cpp  SerialWorker.h
firmware/: main.c
qml/: GearDisplay.qml  Speedometer.qml  Tachometer.qml  main.qml
